--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-# jupyter
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Remove previous ipynb_checkpoints
+#   git rm -r .ipynb_checkpoints/
+
+.__pycache__
+*/__pycache__/*
